add magnitude tag

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <p>Year: <span id="year">&mdash;</span></p>
           <p>Latitude: <span id="lat">&mdash;</span></p>
           <p>Longtitude: <span id="long">&mdash;</span></p>
+	  <p>Magnitude: <span id="mag">&mdash;</span></p>
           <p>Impact type: <span id="type">&mdash;</span></p>
 
         </div>
