--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <input type="checkbox" name="autorotate" checked id="rotate" />  
             <label for="autorotate">Auto-rotate</label>
           </div>
-          <!-- <span class="dropdownbutton open">&darr;</span>
+          <span class="dropdownbutton open">&darr;</span>
           <p>FILTERS</p>
           <div class="forms">
             <div class="form-group">
