--- a/index.html
+++ b/index.html
@@ -47,8 +47,6 @@
           <p>FILTERS</p>
           <div class="forms">
             <div class="form-group">
-              <input type="checkbox" name="autorotate" />
-              <label for="autorotate">Auto-rotate</label>
             </div>
             <p>Year</p>
             <div style="width: 100%; height: 2px; background: white;"></div>
@@ -60,7 +58,7 @@
                 1976
               </div>
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
       
